[metadata]
description-file = README.md

[build_ext]
include-dirs=$HOME/src/science/lib/libxc-3.0.0:$HOME/src/science/lib/libxc-3.0.0/src:$HOME/.local/lib/python2.7/site-packages/numpy/core/include:/usr/local/lib/python2.7/dist-packages/numpy/core/include
library_dirs=$HOME/src/science/lib/libxc-3.0.0/src/.libs
